# backlogged

./: .gitignore  Procfile  README.md  copyright.md  manage.py  pyproject.toml
app/: admin.py  forms.py  functions.py  helpers.py  middleware.py  mixins.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20201216_1647.py  0002_auto_20201230_1255.py  0002_auto_20210101_2211.py  0003_auto_20201216_1649.py  0003_auto_20201230_1256.py  0003_auto_20210101_2302.py  0004_auto_20201217_2059.py  0004_auto_20201230_1256.py  0005_auto_20201217_2100.py  0005_auto_20201230_1321.py  0006_auto_20201217_2100.py  0006_auto_20201230_1321.py  0007_auto_20201218_2153.py  0007_auto_20201230_1322.py  0008_auto_20201230_1322.py  0008_usertimezonemodel.py  0009_auto_20201230_1324.py  0010_auto_20201230_1325.py  0011_auto_20201230_1416.py  0012_customgame_game_id.py  0013_auto_20201230_1627.py  0014_remove_customgame_game_id.py  0015_auto_20201230_1727.py
app/templatetags/: custom_tags.py
backlogger/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
customfilters/templatetags/: custom_filters.py
media/: README.md
miscellaneous/: defaultcover.txt  licenses.json  licenses_old.json
static/css/: custom.css
staticfiles/: README.md
templates/: about.html  accountsettings.html  addgamesearch.html  addgamesearchresults.html  adminredirect.html  backlog.html  base.html  changepassword.html  changetimezone.html  changeusername.html  deleteaccount.html  formview_base.html  gameinfo.html  home.html  licenses.html  login.html  signup.html
templates/account/: README.md
(+26 files in other folders)
