[tool.poetry]
name = "backlogger"
version = "2.0.0-beta"
description = ""
authors = ["The Backlogged Project <code@backlogged.games>"]

[tool.poetry.dependencies]
python = "3.9.0"
Django = "^3.1.3"
django-crispy-forms = "^1.10.0"
whitenoise = "^5.2.0"
igdb-api-v4 = "^0.0.3"
pip-licenses = "^3.1.0"
PyGithub = "^1.54"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.6"
arrow = "^0.17.0"
Pillow = "^8.0.1"
django-npm = "^1.0.0"
markdown2 = "^2.3.10"
cloudinary = "^1.24.0"
django-cloudinary-storage = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
